--- a/xerodashboard/xerodashboard.vcxproj.filters
+++ b/xerodashboard/xerodashboard.vcxproj.filters
@@ -70,6 +70,9 @@
     <ClCompile Include="PlotWidget.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="PlotGraphWidget.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="TODO.txt" />
@@ -105,15 +108,13 @@
     <QtMoc Include="PlotWidget.h">
       <Filter>Header Files</Filter>
     </QtMoc>
+    <QtMoc Include="PlotGraphWidget.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="NTFormattingUtils.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <QtUic Include="PlotWidget.ui">
-      <Filter>Form Files</Filter>
-    </QtUic>
   </ItemGroup>
 </Project>
