--- a/xerodashboard/xerodashboard.vcxproj.filters
+++ b/xerodashboard/xerodashboard.vcxproj.filters
@@ -134,5 +134,8 @@
     <ClInclude Include="Callout.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="JsonFieldNames.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
