--- a/xerodashboard/xerodashboard.vcxproj
+++ b/xerodashboard/xerodashboard.vcxproj
@@ -116,6 +116,7 @@ copy $(SolutionDir)installer\VC_redist.x64.exe $(OutDir)</Command>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Callout.cpp" />
+    <ClCompile Include="EditableTabWidget.cpp" />
     <ClCompile Include="NTFormattingUtils.cpp" />
     <ClCompile Include="NTValueDisplayWidget.cpp" />
     <ClCompile Include="Plot.cpp" />
@@ -160,6 +161,7 @@ copy $(SolutionDir)installer\VC_redist.x64.exe $(OutDir)</Command>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Callout.h" />
+    <QtMoc Include="EditableTabWidget.h" />
     <ClInclude Include="JsonFieldNames.h" />
     <ClInclude Include="NTFormattingUtils.h" />
     <QtMoc Include="PreferencesDialog.h" />
